--- a/route/views/home.html
+++ b/route/views/home.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UnMart homepage</title>
-    <link ref="stylesheet" href="/templates/home.css">
+    <link rel="stylesheet" href="/static/home.css?">
 </head>
 <body>
     <div class="home__title">
-        <h1>
+        <h1 id="home__title">
             UnMart
         </h1>
     </div>
-
-    <hr border='3px;'>
+    <hr>
+    <div class="home__search">
+        search box
+    </div>
 
     <div>
         
